# bookmarker

./: .gitignore  BUILD.bazel  Dockerfile  Dockerfile.jdk  Makefile  README.md  WORKSPACE  exec.sh  maven_install.json  pom.xml
src/bazel/: BUILD.bazel  junit5.bzl  maven.bzl  repositories.bzl
src/main/java/me/a6n/bookmarker/: App.java  AppConfig.java  AppDI.java  BUILD.bazel  DI.java  MainVerticle.java
src/main/java/me/a6n/bookmarker/bookmarks/: BUILD.bazel  Bookmark.java  BookmarkHandler.java  BookmarkRepository.java  BookmarkResource.java  BookmarkService.java
src/main/java/me/a6n/bookmarker/utils/: Choice.java
src/main/resources/: BUILD.bazel  config.yml  index.html
src/main/resources/scripts/: bookmarker.js
src/main/resources/styles/: bookmarker.css
src/test/java/me/a6n/bookmarker/: MainVerticleIntegrationTest.java
src/test/java/me/a6n/bookmarker/bookmarks/: BUILD.bazel  BookmarkRepositoryTest.java  BookmarkServiceTest.java
