java_plugin(
    name = "dagger_plugin",
    processor_class = "dagger.internal.codegen.ComponentProcessor",
    deps = [
        "@maven//:com_google_dagger_dagger_compiler",
    ],
)

java_plugin(
    name = "lombok_plugin",
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    deps = [
        "@maven//:org_projectlombok_lombok",
    ],
)

java_library(
    visibility = ["//visibility:public"],
    name = "dagger_lib",
    exported_plugins = ["dagger_plugin"],
    exports = [
        "@maven//:com_google_dagger_dagger",
    ],
)

java_library(
    visibility = ["//visibility:public"],
    name = "lombok_lib",
    exported_plugins = ["lombok_plugin"],
    exports = [
        "@maven//:org_projectlombok_lombok",
    ]
)
